[package]
name = "ip"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ip"
path = "src/main.rs"

[dependencies]
nrlib = { workspace = true, optional = true, features = ["panic-handler"] }
nexa_boot_info.workspace = true

[features]
default = ["use-nrlib"]
use-nrlib = ["nrlib"]
use-nrlib-std = ["nrlib", "nrlib/std"]
